# ncu-se6030-final-tic-tac-toe

./: README.md  pyproject.toml  requirements.txt
src/tic-tac-toe/: d2Playground.py  gui.py
src/tic_tac_toe/: __main__.py  core.py  d2Playground.py  gui.py
